--- a/news_app/templates/front/index.html
+++ b/news_app/templates/front/index.html
@@ -13,18 +13,18 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-6">
+            <!-- <div class="col-6">
                     <h3 class="text-centre">News from </h3>
                     {% for n in toi_news %}
                     <h5> -  {{n}} </h5>
                     <hr>
                     {% endfor %}
                     <br>
-            </div>
+            </div> -->
             <div class="col-6">
                     <h3 class="text-centre">News from BBC</h3>
-                    {% for htn in ht_news %}
-                    <h5> - {{htn}} </h5>
+                    {% for keys in bbc %}
+                    <h5> - {{keys}} </h5>
                     <hr>
                     {% endfor %}
                     <br>
