--- a/news_app/templates/front/index.html
+++ b/news_app/templates/front/index.html
@@ -24,8 +24,12 @@
             <div class="col-6">
                     <h3 class="text-centre">News from BBC</h3>
                     {% for keys in bbc %}
+                    
                     <h5> - {{keys}} </h5>
+                    {% for date in date_time %}
+                    {{date}}
                     <hr>
+                    {% endfor %}
                     {% endfor %}
                     <br>
             </div>
