--- a/news_app/templates/front/index.html
+++ b/news_app/templates/front/index.html
@@ -23,13 +23,12 @@
             </div> -->
             <div class="col-6">
                     <h3 class="text-centre">News from BBC</h3>
-                    {% for keys in bbc %}
-                    
-                    <h5> - {{keys}} </h5>
-                    {% for date in date_time %}
-                    {{date}}
+                    {% for keys,date in bbc %}
+                    <h5> - {{keys.0}} </h5>
+                    {{keys.1}}
+                    <br>
+                    - {{date}}
                     <hr>
-                    {% endfor %}
                     {% endfor %}
                     <br>
             </div>
