--- a/news_app/templates/front/index.html
+++ b/news_app/templates/front/index.html
@@ -13,14 +13,17 @@
     </div>
     <div class="container">
         <div class="row">
-            <!-- <div class="col-6">
-                    <h3 class="text-centre">News from </h3>
-                    {% for n in toi_news %}
-                    <h5> -  {{n}} </h5>
+            <div class="col-6">
+                    <h3 class="text-centre">News from Indian Express</h3>
+                    {% for keys,date in indian_express %}
+                    <h5> - {{keys.0}} </h5>
+                    {{keys.1}}
+                    <br>
+                    - {{date}}
                     <hr>
                     {% endfor %}
                     <br>
-            </div> -->
+            </div>
             <div class="col-6">
                     <h3 class="text-centre">News from BBC</h3>
                     {% for keys,date in bbc %}
